--- a/config/config.yaml
+++ b/config/config.yaml
@@ -50,8 +50,8 @@ notification:
     # 注意：GitHub Actions 执行时间不稳定，时间范围建议至少留足 2 小时
     # 如果想要精准的定时推送，建议使用 Docker 部署在个人服务器上
     time_range:
-      start: "20:00"  # 推送时间窗口开始（北京时间）
-      end: "22:00"    # 推送时间窗口结束（北京时间）
+      start: "07:00"  # 推送时间窗口开始（北京时间）
+      end: "08:30"    # 推送时间窗口结束（北京时间）
     once_per_day: true  # 每天在时间窗口内只推送一次，如果 false，则窗口内每次执行都推送
     push_record_retention_days: 7  # 推送记录保留天数
 
@@ -80,7 +80,7 @@ notification:
     telegram_chat_id: "" # Telegram Chat ID
     email_from: "" # 发件人邮箱地址
     email_password: "" # 发件人邮箱密码或授权码
-    email_to: "" # 收件人邮箱地址，多个收件人用逗号分隔
+    email_to: "housewood@163.com" # 收件人邮箱地址，多个收件人用逗号分隔
     email_smtp_server: "" # SMTP服务器地址（可选，留空自动识别）
     email_smtp_port: "" # SMTP端口（可选，留空自动识别）
     ntfy_server_url: "https://ntfy.sh" # ntfy服务器地址，默认使用公共服务，可改为自托管地址
@@ -119,3 +119,9 @@ platforms:
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
+- id: "dongfangcaifuguba"
+    name: "东方财富股吧"
+    - id: "juchaozixunwang"
+    name: "巨潮资讯网"
+    - id: "yaopinshenpingzhongxin"
+    name: "药品审评中心"
