Fix indentation and add new entries in config.yaml

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -119,9 +119,11 @@ platforms:
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
-- id: "dongfangcaifuguba"
+  - id: "dongfangcaifuguba"
     name: "东方财富股吧"
-    - id: "juchaozixunwang"
+  - id: "juchaozixunwang"
     name: "巨潮资讯网"
-    - id: "yaopinshenpingzhongxin"
+  - id: "yaopinshenpingzhongxin"
     name: "药品审评中心"
+  - id: "caixin"
+    name: "财新网"
